added new angular 6 app

--- a/portal/src/index.html
+++ b/portal/src/index.html
@@ -42,6 +42,11 @@
 						App 5 (Angular 6)
 					</li>
 				</a>
+				<a href="#/app6">
+					<li>
+						App 6 (Angular 6)
+					</li>
+				</a>
 			</ul>
 		</div>
 	</body>
